--- a/.github/workflows/master_minedocs.yml
+++ b/.github/workflows/master_minedocs.yml
@@ -3,7 +3,7 @@ name: Deploy to Azure Web App
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   build-and-deploy:
@@ -15,7 +15,7 @@ jobs:
     - name: Set up PHP
       uses: shivammathur/setup-php@v2
       with:
-        php-version: '7.4'
+        php-version: '8.0'
         extensions: mbstring, zip
 
     - name: Install composer
